[package]
name = "wslattr"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ['derive'] }
dunce = "1"
normpath = "1"
regex = "1.11"
time = { version = "0.3", features = ['formatting'] }
walkdir = "2.5"
windows-registry = "0.6"

[dependencies.windows]
version = "0.62"
features = [
    "Wdk_Foundation",
    "Wdk_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_Kernel",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_WindowsProgramming",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
]
